<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_in"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo_residente" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded"
        android:hint="@string/correo"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColorHint="#e2e2e2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="5dp"
        android:textColorHint="#e2e2e2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/btn_facebook"
        android:text="@string/iniciar_sesion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/olvide_contrasenia"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/btn_facebook"
        android:text="@string/facebook" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/btn_registrarme"
        android:text="@string/registrar" />
</LinearLayout>